updated tagline & fixed spacing

--- a/_sass/_intro.scss
+++ b/_sass/_intro.scss
@@ -71,7 +71,7 @@
   }
   &__tagline {
     font-weight: 300;
-    max-width: 800px;
+    max-width: 838px;
     .name {
       font-weight: 700;
     }
